<?xml version="1.0"?>
<package>
	<name>k4a-ros</name>
	<version>1.0.0</version>
	<description>
		Kinect 4 Azure ros package using Azure-Kinect-Sensor-SDK.
	</description>

	<maintainer email="chaiziqi@sjtu.edu.cn"> Ziqi CHAI</maintainer>

	<license>BSD</license>

	<url type="website"> https://github.com/ZiqiChai/k4a-ros </url>

	<author email="chaiziqi@sjtu.edu.cn"> Ziqi CHAI</author>

	<buildtool_depend>catkin</buildtool_depend>

	<build_depend>roscpp</build_depend>
	<build_depend>rospy</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>
	<build_depend>message_generation</build_depend>
	<build_depend>std_msgs</build_depend>
	<build_depend>sensor_msgs</build_depend>
	<build_depend>pcl_ros</build_depend>
	<build_depend>pcl_conversions</build_depend>
	<build_depend>image_transport</build_depend>
	<build_depend>cv_bridge</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>rospy</run_depend>
	<run_depend>dynamic_reconfigure</run_depend>
	<run_depend>message_runtime</run_depend>
	<run_depend>std_msgs</run_depend>
	<run_depend>sensor_msgs</run_depend>
	<run_depend>pcl_ros</run_depend>
	<run_depend>pcl_conversions</run_depend>
	<run_depend>image_transport</run_depend>
	<run_depend>cv_bridge</run_depend>

</package>
